welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:8: error: not found: value T
		if (T(c) == r && c < nums.length - 3)
                    ^noTriples:10: error: not found: value T
			if(T(c+1) == r)
                           ^noTriples:12: error: not found: value T
				if (T(c+2) == r)
                                    ^noTriples:31: error: type mismatch;
 found   : Int
 required: Boolean
	if (r)
            ^